--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,3 +1,8 @@
+0.6.2 (2012-03-20)
+------------------
+
+- fix for itemsimplement on submenus: use the parents itemsimplement in the submenus main menuitem
+
 0.6.1 (2010-06-28)
 ------------------
 
